<resources>
    <string name="app_name">Welcome to Quiz App</string>
    <string name="app_name1">Quiz App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_Leaderboard">Leaderboard</string>
    <string name="menu_Profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    <!-- Google Sign-In Configuration -->
    <string name="default_web_client_id">769922210343-gdna58saac5ud094eurokureetr9tjp2.apps.googleusercontent.com</string>
</resources>