<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.quizpractice.CategoryFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.quizpractice.ui.gallery.GalleryFragment"
        android:label="@string/menu_Leaderboard"
        tools:layout="@layout/fragment_leader_board" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.quizpractice.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_Profile"
        tools:layout="@layout/fragment_account" />
</navigation>